[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudflare-error-page"
version = "0.1.0"
description = "A customizable Cloudflare error page generator"
authors = [{ name = "Anthony Donlon" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0"
]

[project.urls]
Homepage = "https://github.com/donlon/cloudflare-error-page"

[tool.hatch.build]
include = [
    "cloudflare_error_page/*.py",
    "cloudflare_error_page/templates/*",
]
